# nexusdojo

./: .gitignore  7_DAY_SPRINT.md  AGENTS.md  CHANGELOG.md  FTUE_QA_CHECKLIST.md  ISSUES.md  LICENSE  README.md  REGINALD_GAMEPLAN.md  branch_point.md  ideas.md  nexus_roadmap_map.md  pyproject.toml  requirements.txt  things_to_do.md  tmux_essentials.md
.gemini/tmp/: fixed_menu_code.py
dojo/age-calculator/: LOG.md  MISSION.md  main.py
dojo/basic-calculator/: .kata.json  MISSION.md  README.md  kata.md  main.py
dojo/calculate-the-sum-of-a-list-of-numbers/: .kata.json  LOG.md  MISSION.md  README.md  main.py  requirements.txt
dojo/chain-of-thought-calculator/: MISSION.md  main.py
dojo/coin-flip/: .kata.json  MISSION.md  README.md  main.py
dojo/csv-cleaner/: MISSION.md  main.py
dojo/doc-qa-harness/: MISSION.md  main.py
dojo/faq-retriever/: MISSION.md  main.py
dojo/hello-personalized-world/: LOG.md  MISSION.md  main.py
dojo/here-are-three-concise-kata-ideas-targeted-to-the-user-s-weakest-pillar/: README.md
dojo/inventory-aggregator/: .kata.json  MISSION.md  main.py
dojo/jwt-notes/: .kata.json  MISSION.md  main.py  requirements.txt
dojo/leetcode-binary-search/: MISSION.md  main.py
dojo/leetcode-course-schedule/: MISSION.md  main.py
dojo/leetcode-group-anagrams/: MISSION.md  main.py
learning_notes/: AI_Fundamentals_LLM_and_RAG_Architectures.md  bindkey_overview.md  career_roadmap.md  nvim_intro.md  prompt_descriptors.md  zsh_vim_cheatsheet.md
notes/: log.md  rubric.md
system_prompts/: senior_ai_mentor.md
tests/: __init__.py  test_cli.py
(+165 files in other folders)
